--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "eslint-plugin-lit": "^1.2.0"
     },
     "dependencies": {
-        "concurrently": "^5.1.0",
+        "concurrently": "^5.1.0"
     },
     "scripts": {
         "start:server": "cd ./packages/server && yarn start",
